--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -87,7 +87,7 @@ All operations with nondeterministic latencies, e.g. load/store requests to the 
 We have a written an in-house parser that enables the programmer to express the program in terms of SDFs using our defined assembly language.
 The parser produces an Intermediate Representation (IR) that is used as an input to our proposed mapper.
 
-The IR represents each SDF as a graph, where every instruction a node.
+The IR is a graph representation of the program which consists of SDF subgraphs. Each SDF is a disconnected component of the IR graph. Here every instruction a node.
 Each node represents an instruction that needs to be placed onto a SE tile at the proper time-slice such that when all nodes are placed, the program executes correctly. 
 In \figurename~\ref{fig:se_example}, the edges of the graph represent the data dependencies of the instructions. 
 The nodes also contain information about the variables that need to be present in tile memories during instruction execution. 
