Change title to title case

--- a/doc/conference_101719.tex
+++ b/doc/conference_101719.tex
@@ -17,7 +17,7 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{Reinforcement learning approach for mapping applications to dataflow-based Coarse-Grained Reconfigurable Array}
+\title{	Reinforcement Learning Approach for Mapping Applications to Dataflow-Based Coarse-Grained Reconfigurable Array}
 
 % \author{\IEEEauthorblockN{1\textsuperscript{st} Given Name Surname}
 % \IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
